refactor: Stream toList 변경